# System-Monitor

./: .gitignore  Cargo.toml  LICENSE.md  Readme.md
.github/workflows/: rust.yml
src/: main.rs
