[package]
name = "system-monitor"
version = "0.2.0"
edition = "2021"
authors = ["Jagadesh Varma <jagadeshvarma07@gmail.com>"]
description = "A system monitoring tool built in Rust"
repository = "https://github.com/jagguvarma15/system-monitor"
license = "MIT"
readme = "README.md"
keywords = ["system", "monitor", "performance", "cli", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
sysinfo = "0.30"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
crossterm = "0.27"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"